Bug 395828 - After following a link that opens in a new tab, the 'Back' feature won't become avaiable.
Summary: After following a link that opens in a new tab, the 'Back' feature won't beco...
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-24 21:37 UTC by magiblot
Modified: 2018-07-08 23:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description magiblot 2018-06-24 21:37:00 UTC
Hello,

This issue should be easy to reproduce. These steps do it for me:

1. Go to a site whose links will open in a new tab by default (with a simple left click - you WON'T reproduce the issue if you middle-click). For example: https://forum.doom9.org/showpost.php?p=1844631&postcount=7: any link in the body of that post will be opened in a new tab.

2. Once you are in the new tab, go to another site through the address bar or by following a link in the page, without changing tab.

3. The 'Back' button isn't enabled.

I'm using package 3.0.1-4 of ArchLinux's 'extra' repository.

Thanks.
Comment 1 magiblot 2018-06-25 16:40:10 UTC
I just noticed the 'Back' button is accessible from the right-click menu. It's only the 'Back' and 'Forward' buttons in the address bar that stay disabled.
Comment 2 Xavier Brochard 2018-06-30 11:15:22 UTC
I can confirm this behavior on Debian Sid, Falkon 3.0.0, QtWebEngine 5.10.1, package 3.0.0-3
Comment 3 David Rosca 2018-07-08 19:09:33 UTC
Git commit 53e0a43762523185fb98bf705f85cf0dfa27247f by David Rosca.
Committed on 08/07/2018 at 18:34.
Pushed by drosca into branch 'master'.

NavigationBar: Correctly reconnect to page actions
FIXED-IN: 3.0.2

M  +16   -11   src/lib/navigation/navigationbar.cpp

https://commits.kde.org/falkon/53e0a43762523185fb98bf705f85cf0dfa27247f
Comment 4 magiblot 2018-07-08 23:02:06 UTC
Thank you very much.