NavigationBar: Correctly reconnect to page actions

BUG: 395828
FIXED-IN: 3.0.2